--- a/app/src/main/res/layout/album_card.xml
+++ b/app/src/main/res/layout/album_card.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="280dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginLeft="3dp"
     android:layout_marginTop="2dp"
-    android:layout_marginRight="3dp"
     android:layout_marginBottom="10dp"
-    android:elevation="10dp">
+    android:elevation="10dp"
+    app:cardBackgroundColor="@color/colorPrimary">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -28,19 +27,21 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_marginBottom="1dp" />
-        <android.support.v7.widget.CardView
-            android:layout_width="41dp"
-            android:layout_height="41dp"
-            app:cardBackgroundColor="#000"
-            app:cardCornerRadius="21dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true">
-            <Button
-                android:id="@+id/play_album_button"
+
+            <android.support.v7.widget.CardView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="@drawable/play_album" />
-        </android.support.v7.widget.CardView>
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                app:cardBackgroundColor="#000"
+                app:cardCornerRadius="21dp">
+
+                <Button
+                    android:id="@+id/play_album_button"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/play_album" />
+            </android.support.v7.widget.CardView>
         </RelativeLayout>
 
         <RelativeLayout
