--- a/app/src/main/res/layout/album_card.xml
+++ b/app/src/main/res/layout/album_card.xml
@@ -77,6 +77,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
+                android:clickable="true"
                 android:background="@drawable/ic_details_album" />
 
             <Button
@@ -97,6 +98,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="140dp"
+
+
                 android:background="@drawable/download_album" />
 
         </RelativeLayout>
