--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
     <color name="toolbartextColor">#000</color>
     <color name="toolbarColorTint">#000</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="cfdialogueColor">#dedee5</color>
-
+    <color name="cfdialogueColor">#FFFF</color>
+    <color name="cfdialoguecolorContact">#dedee5</color>
     <color name="navigation_text_header_color">#FFFF</color>
     <color name="navigation_text_subtitle_color">#ededef</color>
     <color name="like_button_bubble_color">#ad0101</color>
