--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,7 +11,9 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -19,19 +22,24 @@
             app:navigationIcon="@drawable/ic_navigation_open"
             app:title="@string/toolbar_name"
             app:titleTextColor="@color/toolbartextColor">
+           <RelativeLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               >
 
-            <com.like.LikeButton
-                android:id="@+id/like_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="80dp"
-                android:onClick="addLikes"
-                app:dots_primary_color="@color/like_button_bubble_color"
-                app:icon_size="20dp"
-                app:icon_type="heart" />
+               <com.varunest.sparkbutton.SparkButton
+                   android:id="@+id/spark_button"
+                   android:layout_width="wrap_content"
+                   android:layout_height="match_parent"
+                   app:sparkbutton_activeImage="@drawable/ic_heart_on"
+                   app:sparkbutton_inActiveImage="@drawable/ic_heart_off"
+                   app:sparkbutton_iconSize="30dp"
 
+                 />
+
+           </RelativeLayout>
         </android.support.v7.widget.Toolbar>
-
+        </RelativeLayout>
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
